oobe_config: Add DeleteFlexOobeConfig DBus config
This method (implemented in a child CL) will be invoked from
Chrome to clean up the Flex OOBE config when the device finishes OOBE.
Here, by "finishes OOBE", we mean either:
1. Successful enrollent (either through Flex Auto-Enrollment or manual
   fallback enrollment)
2. Consumer user registers (which is allowed after certain types of Flex
   Auto-Enrollment errors).

This CL also adds Go bindings for oobe_config DBus protos, as the DBus
methods will be exercised in Tast tests.

BUG=b:316944501
BUG=b:322027482
TEST=emerge-${BOARD} oobe_config chromeos-base/system-api

Change-Id: I4aeb0d6f9e0444a5907e81c1a8169ef0e25062eb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5214652
Commit-Queue: Jackson Tadie <jacksontadie@google.com>
Reviewed-by: Miriam Polzer <mpolzer@google.com>
Tested-by: Jackson Tadie <jacksontadie@google.com>

--- a/oobe_config/etc/dbus-1/org.chromium.OobeConfigRestore.conf
+++ b/oobe_config/etc/dbus-1/org.chromium.OobeConfigRestore.conf
@@ -15,5 +15,8 @@
     <allow send_destination="org.chromium.OobeConfigRestore"
            send_interface="org.chromium.OobeConfigRestore"
            send_member="ProcessAndGetOobeAutoConfig"/>
+    <allow send_destination="org.chromium.OobeConfigRestore"
+           send_interface="org.chromium.OobeConfigRestore"
+           send_member="DeleteFlexOobeConfig"/>
   </policy>
 </busconfig>
