--- a/system_api/BUILD.gn
+++ b/system_api/BUILD.gn
@@ -51,6 +51,7 @@ group("all") {
     ":system_api-minios-protos",
     ":system_api-ml-goprotos",
     ":system_api-ml-protos",
+    ":system_api-oobe_config-goprotos",
     ":system_api-oobe_config-protos",
     ":system_api-patchpanel-goprotos",
     ":system_api-patchpanel-protos",
@@ -587,6 +588,12 @@ proto_library("system_api-oobe_config-protos") {
   sources = [ "${proto_in_dir}/oobe_config.proto" ]
   standalone = true
   install_package = true
+}
+
+goproto_library("system_api-oobe_config-goprotos") {
+  proto_in_dir = "dbus/oobe_config"
+  proto_out_dir = "go/src/"
+  sources = [ "${proto_in_dir}/oobe_config.proto" ]
 }
 
 proto_library("system_api-runtime_probe-protos") {
