--- a/cryptohome/dev-utils/BUILD.gn
+++ b/cryptohome/dev-utils/BUILD.gn
@@ -13,11 +13,11 @@ group("all") {
 
 executable("cryptohome-test-tool") {
   sources = [
-    "../cryptohome-test-tool.cc",
     "../cryptorecovery/fake_recovery_mediator_crypto.cc",
     "../cryptorecovery/inclusion_proof.cc",
     "../cryptorecovery/inclusion_proof_test_util.cc",
     "../cryptorecovery/recovery_crypto_hsm_cbor_serialization.cc",
+    "cryptohome-test-tool.cc",
   ]
   install_path = "sbin"
   libs = [ "cbor" ]
@@ -32,8 +32,8 @@ executable("cryptohome-tpm-live-test") {
   # TODO(b/238114321): Reuse fake/test libraries from the parent GN file instead
   # of listing all their sources here.
   sources = [
-    "../cryptohome-tpm-live-test.cc",
-    "../tpm_live_test.cc",
+    "cryptohome-tpm-live-test.cc",
+    "tpm_live_test.cc",
   ]
   configs += [ "//common-mk:test" ]
   install_path = "sbin"
