featured: Use default_states.json from system_api
Fix BUILD.gn to pick up the json compiled by system_api.

fixes: d3f6a96818 ("various: Move default_states.json to system_api.")

BUG=b:318553402
TEST=Check featured compiles after update.

Change-Id: If0bf59224d13e449ea4a8e7c48da24933b276577
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5219493
Reviewed-by: Li-Yu Yu <aaronyu@google.com>
Reviewed-by: Dennis Kempin <denniskempin@google.com>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Owners-Override: Li-Yu Yu <aaronyu@google.com>
Tested-by: Gwendal Grignou <gwendal@chromium.org>

--- a/featured/BUILD.gn
+++ b/featured/BUILD.gn
@@ -77,8 +77,8 @@ executable("featured") {
 action("early_boot_state_checks") {
   visibility = [ ":libfeatures" ]
   script = "scripts/generate_early_boot_checks.py"
-  json_path = rebase_path("//system_api/dbus/featured/default_states.json",
-                          root_build_dir)
+  json_path =
+      "${sysroot}/usr/include/chromeos/dbus/featured/default_states.json"
   inputs = [
     json_path,
     "scripts/early_boot_state_checks_cc.jinja",
