chromeos-config: support MediaTek Country List
Adds a generator that takes Country List configuration information and
converts it to a binary file that will be included with coreboot and be
passed to the kernel on request.

Adds the get-wifi-mtcl-files subparser to cros_config_host so files are
copied appropriately to cbfs-rw-raw.

See: http://go/cros-wifi-mtk-disable-6g for more context.

Summary:
* Changes to cros_config_proto_converter.py
  * Refactor out writing the wifi cbfs file to method
    _write_cbfs_wifi_file, as this is used both for mtcl and sar
    storage
  * Add method _wifi_mtcl_map to allow having one mtcl per design, as
    this is all that's necessary for now
  * Add method _create_mtcl_file_content to convert the protobuf
    MtclTable to a binary file as coreboot expects
* Changes to cros_config_host.py
  * Add the ability to get mtcl and intel sar files from the same
    command.
  * Add a TODO to remove the legacy command that specifieds intel

BUG=b:295541901
TEST=regen.py
TEST=./run_test.sh
TEST=cros workon --host start chromeos-config-host
TEST=cros workon --board=$BOARD start chromeos-config-bsp-private
chromeos-config
TEST=FEATURES=test sudo -E emerge chromeos-config-host
TEST=emerge-$BOARD chromeos-config-bsp-private chromeos-config
TEST=Modify config.star for a board
TEST=gen_config config.star
TEST=Verify the file is in
/build/$BOARD/firmware/cbfs-rw-raw/$MODEL/wifi_mtcl.bin
TEST=Verify with hexdump that the file contains the correct binary data

Cq-Depend: chromium:5219771
Disallow-Recycled-Builds: test-failures
Change-Id: Iab68d2ee741f4043f89f34f148987947529896b5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5237778
Reviewed-by: Nicolas Norvez <norvez@chromium.org>
Commit-Queue: Nicolas Norvez <norvez@chromium.org>
Tested-by: David Ruth <druth@chromium.org>
Reviewed-by: Sam McNally <sammc@chromium.org>
Reviewed-by: Jesse McGuire <jessemcguire@google.com>

--- a/chromeos-config/test_data/test.yaml
+++ b/chromeos-config/test_data/test.yaml
@@ -369,6 +369,10 @@ chromeos:
             <<: *some_whitelabel_config
             wallpaper: "{{$wallpaper}}"
             touch: *some_touch_config
+            wifi:
+              mtcl-file:
+                build-path: "build-path/wifi_mctl.bin"
+                system-path: "/firmware/cbfs-rw-raw/proj/wifi_mtcl.bin"
         - $sku-id: 9
           config:
             <<: *some_whitelabel_config
