tpm_softclear_utils: Use libstorage::Platform
Use libstorage::Platform ReadFileToString() instead of calling
directly brillo.
MockPlatform is used in the tests instead of implementing our own mock.

BUG=b:134989277
TEST=Unit test, CQ.

Change-Id: Idad1bf82c72906febbd3dcda775f11c743661612
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5233165
Reviewed-by: Andrey Pronin <apronin@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/tpm_softclear_utils/BUILD.gn
+++ b/tpm_softclear_utils/BUILD.gn
@@ -42,6 +42,7 @@ static_library("utility_library") {
       # linker flags won't be in the right order.
       "system_api",
       "protobuf-lite",
+      "libstorage_platform",
     ]
   }
   if (use.tpm) {
@@ -65,6 +66,7 @@ if (use.test) {
     if (use.tpm2) {
       sources = [ "tpm2_test.cc" ]
       libs = [ "trunks_test" ]
+      pkg_deps = [ "libstorage_fake_platform" ]
     }
     deps = [
       ":utility_library",
