oobe_config: Add impl for DeleteFlexConfig DBus method
Rename load_oobe_config_flex to flex_oobe_config to indicate that
the class handles more file operations than just reads.

BUG=b:316944501
TEST=cros_run_unit_tests --board reven --packages oobe_config
TEST=tast run <device> flex.FlexOobeConfigSmoke (with crrev/c/5242322)

Change-Id: I05f7b35746cf157927acf9dfa6cc439610613b32
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5225637
Commit-Queue: Jackson Tadie <jacksontadie@google.com>
Reviewed-by: Miriam Polzer <mpolzer@google.com>
Tested-by: Jackson Tadie <jacksontadie@google.com>
Reviewed-by: Yves Arrouye <drcrash@chromium.org>

--- a/oobe_config/BUILD.gn
+++ b/oobe_config/BUILD.gn
@@ -73,7 +73,7 @@ static_library("liboobeconfig") {
   sources = [
     "encryption/openssl_encryption.cc",
     "encryption/pstore_storage.cc",
-    "load_oobe_config_flex.cc",
+    "flex_oobe_config.cc",
     "load_oobe_config_rollback.cc",
     "network_exporter.cc",
     "oobe_config.cc",
@@ -212,13 +212,11 @@ if (use.test) {
   executable("oobe_config_test") {
     sources = [
       "encryption/openssl_encryption_test.cc",
+      "flex_oobe_config_test.cc",
       "load_oobe_config_rollback_test.cc",
       "oobe_config_test.cc",
       "rollback_cleanup_test.cc",
     ]
-    if (use.reven_oobe_config) {
-      sources += [ "load_oobe_config_flex_test.cc" ]
-    }
     configs += [
       "//common-mk:test",
       ":target_defaults",
