modem-utilities: Ignore gnlint install_path error
cros lint says:

  modem-utilities/BUILD.gn:28:3: GnLintInstallPathAlias: CrOS uses the
  alias "lib" instead of "/usr/lib" for install_path

But common-mk/ebuild_function.py does not really support that alias
here, since 'type = "executable"' generally requires an absolute path
for anything outside of "bin" and "sbin".

BUG=none
TEST=`cros lint`

Change-Id: Iae4a047452dfa9ed3c59878aeff101550009e536
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5367151
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Commit-Queue: Brian Norris <briannorris@chromium.org>
Tested-by: Brian Norris <briannorris@chromium.org>

--- a/modem-utilities/BUILD.gn
+++ b/modem-utilities/BUILD.gn
@@ -25,5 +25,9 @@ install_config("install_scripts") {
     "modem-common.sh",
   ]
   type = "executable"
+
+  # Linter recommendation to use "lib" alias conflicts with GN helpers'
+  # expectations of an absolute path.
+  # gnlint: disable=GnLintInstallPathAlias
   install_path = "/usr/lib"
 }
