arc-setup: Fix arc data is not removed on opt out
This adopt recent changes in cryptohome switching to
/var/lib/system_salt

BUG=b:321151425
BUG=b:321750408
TEST=tast run ${DUT} arc.AuthPerf.unmanaged_vm

Change-Id: I32b7ebd20c9bfee703e8c3477d3c96fe854fcc5a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5226572
Tested-by: Yury Khmel <khmel@chromium.org>
Reviewed-by: Kazuhiro Inaba <kinaba@chromium.org>
Commit-Queue: Yury Khmel <khmel@chromium.org>

--- a/arc/setup/init/minijail/arc-remove-data.conf
+++ b/arc/setup/init/minijail/arc-remove-data.conf
@@ -11,3 +11,5 @@ no-fs-restrictions
 bind-mount = /home
 mount = tmpfs,/run,tmpfs
 bind-mount = /run/dbus
+mount = tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
+bind-mount = /var/lib,,1
