crash: export shadercached logs on crash
For now, we only need /var/log/messages for shadercached crashes.

BUG=b:315400103
TEST=CQ

Change-Id: I3fe87b3f8d370679fb0ffc6a4606fe8c9e1014c7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5225132
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Commit-Queue: Max Lee <endlesspring@google.com>
Tested-by: Max Lee <endlesspring@google.com>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -877,3 +877,9 @@ udevd=\
   echo "===dmesg==="; \
   dmesg | tail -n 50; \
   echo EOF
+
+# shadercached logs for crashes.
+shadercached=\
+  echo "===/var/log/messages==="; \
+  tail -n 50 /var/log/messages | grep shadercached; \
+  echo EOF
