verity: add subtool export
We want this available for the signer.

BUG=b:306703051
TEST=CQ passes

Change-Id: I0a786d4f9f33f854cd011faef0f63228c4bcedac
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5229897
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Mike Frysinger <vapier@chromium.org>
Tested-by: Mike Frysinger <vapier@chromium.org>

--- a/verity/BUILD.gn
+++ b/verity/BUILD.gn
@@ -12,6 +12,9 @@ group("all") {
     ":libdm-bht",
     ":verity",
   ]
+  if (use.cros_host) {
+    deps += [ ":install_subtool" ]
+  }
   if (use.test) {
     deps += [ ":verity_tests" ]
   }
@@ -58,6 +61,11 @@ install_config("install_headers") {
 install_config("install_fls_header") {
   sources = [ "include/asm-generic/bitops/fls.h" ]
   install_path = "/usr/include/verity/asm-generic/bitops/"
+}
+
+install_config("install_subtool") {
+  sources = [ "subtool.textproto" ]
+  install_path = "/etc/cros/sdk-packages.d/verity"
 }
 
 if (use.test) {
