shill: wifi: set default SAE_PWE value to 2 in wpa_supplicant
BUG=b:322021332
TEST=check default wpa_supplicant conf file on device

Change-Id: I21b428d8d35b0781f6dbd8d92865eb9d588e839d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5230466
Commit-Queue: Jintao Lin <jintaolin@chromium.org>
Reviewed-by: Nicolas Norvez <norvez@chromium.org>
Reviewed-by: Matthew Wang <matthewmwang@chromium.org>
Tested-by: Jintao Lin <jintaolin@chromium.org>

--- a/shill/shims/wpa_supplicant.conf.in
+++ b/shill/shims/wpa_supplicant.conf.in
@@ -9,6 +9,16 @@ disable_scan_offload=1
 pmf=1
 sae_check_mfp=1
 
+# SAE mechanism for PWE derivation
+# 0 = hunting-and-pecking loop only (default without password identifier)
+# 1 = hash-to-element only (default with password identifier)
+# 2 = both hunting-and-pecking loop and hash-to-element enabled
+# Note: The default value is likely to change from 0 to 2 once the new
+# hash-to-element mechanism has received more interoperability testing.
+# When using SAE password identifier, the hash-to-element mechanism is used
+# regardless of the sae_pwe parameter value.
+sae_pwe=2
+
 # Configure P2P Interface MAC address policy by default.
 # use random MAC address on creating the interface.
 p2p_interface_random_mac_addr=1
