crash-reporter: enable connectivity fwdump for fbpreprocessord
Firmware dump in feedback report feature is getting
enabled based on fbpreprocessord use flag in fbpreprocessord.
Use the same to do for crash-reporter. This will make it easy
to securely enable this feature for testing.

BUG=b:322270081
TEST=emerge-brya crash-reporter
TEST=FEATURES=test emerge-brya crash-reporter
TEST=Flash generated CQ build on brya, enable fbpreprocessord
on brya and run
tast run <dut> crash.ValidateFirmwareDumpGeneration.* Passes

Cq-Depend: chromium:5234577
Change-Id: I163ce6dcfb7ede6f7e452348f85e95447e8e6216
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5233166
Reviewed-by: Nicolas Norvez <norvez@chromium.org>
Commit-Queue: Abhishek Kumar <kuabhs@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Tested-by: Abhishek Kumar <kuabhs@chromium.org>
Reviewed-by: Jack Rosenthal <jrosenth@chromium.org>

--- a/crash-reporter/BUILD.gn
+++ b/crash-reporter/BUILD.gn
@@ -15,6 +15,7 @@ shared_defines = [
   "USE_CHROMELESS_TTY=${use.chromeless_tty}",
   "USE_FORCE_BREAKPAD=${use.force_breakpad}",
   "USE_HW_DETAILS=${use.hw_details}",
+  "USE_FBPREPROCESSORD=${use.fbpreprocessord}",
 ]
 
 group("all") {
