--- a/diagnostics/cros_healthd/delegate/routines/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/routines/BUILD.gn
@@ -29,7 +29,10 @@ if (use.test) {
   }
 
   source_set("test") {
-    sources = [ "prime_number_search_test.cc" ]
+    sources = [
+      "floating_point_accuracy_test.cc",
+      "prime_number_search_test.cc",
+    ]
     configs += [ ":target_test" ]
     deps = [
       ":routines",
