net-base: Implement NetworkConfig::Merge
Currently in shill, we have IPConfig::Properties::ToNetworkConfig that
merges IPv4 and IPv6 properties of type IPConfig::Properties and creates
a NetworkConfig. However, if we have two NetworkConfig structs that
stores IPv4 and IPv6 properties and need to merge them together into one
NetworkConfig, we have no instant tool to use. Such merge operation is
needed in some tests in shill/network/network_test.cc. In the near
future, it will also be needed in
shill::Cellular::NetworkInfo::Configure to merge IPv4 & IPv6
Configurations in Cellular, after IPConfig::Properties used there is
migrated to NetworkConfig.

In this patch, we create NetworkConfig::Merge for the above purpose.
This method copies IPv4 properties from |ipv4_config| and IPv6
properties from |ipv6_config|, and merges other non-family-specific
fields to create a new NetworkConfig.

BUG=b:307855773
TEST=FEATURES=test emerge-${BOARD} net-base shill

Change-Id: I40866fe60becba7dd1d406562ee0cc94a08f8e45
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5232623
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>
Tested-by: Zikai Chen <chenzikai@google.com>
Reviewed-by: Taoyu Li <taoyl@chromium.org>

--- a/net-base/BUILD.gn
+++ b/net-base/BUILD.gn
@@ -140,6 +140,7 @@ if (use.test) {
       "netlink_attribute_test.cc",
       "netlink_packet_test.cc",
       "netlink_socket_test.cc",
+      "network_config_test.cc",
       "process_manager_test.cc",
       "rtnl_handler_test.cc",
       "rtnl_listener_test.cc",
