secagentd: proto: fix go module import path
Go modules require a domain as prefix for import paths,
so we fix it before enabling modules mode.

This is a companion CL to tast-tests and
chromiumos-overlay.

BUG=b:187795288
TEST=Local builds in modules + GOPATH mode; CQ.

Cq-Depend: chromium:5233495, chromium:5234608
Change-Id: I7876b312473fb4b2a37eec368c56482edd4d8f93
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5234349
Reviewed-by: Jason Ling <jasonling@chromium.org>
Tested-by: Adrian Ratiu <adrian.ratiu@collabora.corp-partner.google.com>
Commit-Queue: Adrian Ratiu <adrian.ratiu@collabora.corp-partner.google.com>

--- a/secagentd/proto/BUILD.gn
+++ b/secagentd/proto/BUILD.gn
@@ -19,6 +19,6 @@ proto_library("security_xdr_events_proto") {
 goproto_library("libsecagentd-goprotos") {
   proto_in_dir = "//secagentd/proto"
   proto_out_dir = "go/src/"
-  import_mapping = [ "security_xdr_events.proto=chromiumos/xdr/secagentd" ]
+  import_mapping = [ "security_xdr_events.proto=go.chromium.org/chromiumos/xdr/secagentd" ]
   sources = [ "security_xdr_events.proto" ]
 }
