lvmd: Add missing DBus dep
.. to fix flakes in builders.

BUG=b:322200474
TEST=CQ + builders

Change-Id: I194983dacee62e567dbe0742511a40b1a81a843f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5234404
Tested-by: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>

--- a/lvmd/BUILD.gn
+++ b/lvmd/BUILD.gn
@@ -102,6 +102,7 @@ if (use.test) {
     run_test = true
     deps = [
       ":liblvmd",
+      ":lvmd_dbus_adaptors",
       "//common-mk/testrunner",
     ]
   }
