arc-setup: Allow system salt accesss for multiple entry points
There are 5 possible entry points that uses Paths::Create. Per bug
attached 4 entry points appeare in crash. One was fixed in previuous CL.
This fixes the same way 3 other points from crash and one preventing.

BUG=b:321322292
TEST=Local build
TEST=Monitor crash reports go/eerlh

Change-Id: I9a63c4934388fc40d121b5df86388e5e3ac3d590
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5235057
Reviewed-by: Kazuhiro Inaba <kinaba@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Yury Khmel <khmel@chromium.org>
Tested-by: Yury Khmel <khmel@chromium.org>

--- a/arc/setup/init/minijail/arc-handle-upgrade.conf
+++ b/arc/setup/init/minijail/arc-handle-upgrade.conf
@@ -18,3 +18,4 @@ mount = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 mount = /run/arcvm,/run/arcvm,none,MS_BIND|MS_REC
 mount = tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 mount = /var/lib/metrics,/var/lib/metrics,none,MS_BIND|MS_REC
+bind-mount = /var/lib,,1
