diagnostics: Move audio jack evdev delegate out of evdev_utils
BUG=b:322132754
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ibf8fbb5743695411abc49c38be32b7421ea4b640
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5232848
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/BUILD.gn
@@ -16,6 +16,7 @@ source_set("libexecutor_delegate") {
   sources = [ "delegate_impl.cc" ]
   configs += [ ":libexecutor_delegate_pkg_deps" ]
   deps = [
+    "//diagnostics/cros_healthd/delegate/events",
     "//diagnostics/cros_healthd/delegate/fetchers",
     "//diagnostics/cros_healthd/delegate/routines",
     "//diagnostics/cros_healthd/delegate/utils",
