diagnostics: Move touchpad evdev delegate out of evdev_utils
BUG=b:322132754
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I8cff1b4f21de828f590d2423dac529321c997596
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5232544
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -12,7 +12,10 @@ pkg_config("target_default") {
 }
 
 source_set("events") {
-  sources = [ "audio_jack_evdev_delegate.cc" ]
+  sources = [
+    "audio_jack_evdev_delegate.cc",
+    "touchpad_evdev_delegate.cc",
+  ]
   configs += [ ":target_default" ]
   deps = [
     "//diagnostics/base",
