diagnostics: Move touchscreen evdev delegate out of evdev_utils
BUG=b:322132754
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I7c93097bc80cc713772c575050e4ed157c6773e9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5232545
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -15,6 +15,7 @@ source_set("events") {
   sources = [
     "audio_jack_evdev_delegate.cc",
     "touchpad_evdev_delegate.cc",
+    "touchscreen_evdev_delegate.cc",
   ]
   configs += [ ":target_default" ]
   deps = [
