--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -14,6 +14,7 @@ pkg_config("target_default") {
 source_set("events") {
   sources = [
     "audio_jack_evdev_delegate.cc",
+    "stylus_evdev_delegate.cc",
     "stylus_garage_evdev_delegate.cc",
     "touchpad_evdev_delegate.cc",
     "touchscreen_evdev_delegate.cc",
