--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -19,6 +19,7 @@ source_set("events") {
     "stylus_garage_evdev_delegate.cc",
     "touchpad_evdev_delegate.cc",
     "touchscreen_evdev_delegate.cc",
+    "volume_button_evdev_delegate.cc",
   ]
   configs += [ ":target_default" ]
   deps = [
