hardware_verifier: update system_api Go module path
Go modules require a domain as prefix for import paths,
so we fix it before enabling modules mode.

BUG=b:187795288
TEST=Local builds in modules + GOPATH mode; CQ.

Cq-Depend: chromium:5238547, chromium:5237271, chromium:5238745, chromium:5238092, chrome-internal:6918474
Change-Id: I2e35362c411d46ecee728f614ae53931728c1aaa
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5238546
Reviewed-by: Yu-An Wang <wyuang@google.com>
Commit-Queue: Bob Haarman <inglorion@chromium.org>
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>
Tested-by: Adrian Ratiu <adrian.ratiu@collabora.corp-partner.google.com>

--- a/hardware_verifier/proto/BUILD.gn
+++ b/hardware_verifier/proto/BUILD.gn
@@ -25,8 +25,7 @@ proto_library("hardware_verifier-protos") {
 }
 
 goproto_library("hardware_verifier-goprotos") {
-  import_mapping =
-      [ "runtime_probe.proto=chromiumos/system_api/runtime_probe_proto" ]
+  import_mapping = [ "runtime_probe.proto=go.chromium.org/chromiumos/system_api/runtime_probe_proto" ]
   proto_in_dir = "./"
   proto_out_dir = "go/src/"
   proto_lib_dirs = [ "${sysroot}/usr/include/chromeos/dbus/runtime_probe" ]
