cros-disks: filter out SandboxedInitTest under qemu
Newer versions of qemu block certain prctl commands that cros-disks
relies on when testing and causes them to fail.  Filter that family
of tests out.

See the upstream commit for more details:
  https://github.com/qemu/qemu/commit/220717a6f46a99031a5b1af964bbf4dec1310440

BUG=b:187795247
TEST=CQ passes

Change-Id: Ib347511bff22813106efb185f1dc52b4f5622518
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5237777
Reviewed-by: François Degros <fdegros@chromium.org>
Tested-by: François Degros <fdegros@chromium.org>
Commit-Queue: François Degros <fdegros@chromium.org>

--- a/cros-disks/BUILD.gn
+++ b/cros-disks/BUILD.gn
@@ -284,6 +284,11 @@ if (use.test) {
   executable("disks_testrunner") {
     run_test = true
     gtest_filter_qemu = "-*RunAsRoot*"
+    if (!use.x86 && !use.amd64) {
+      # If qemu-user ever implements PR_SET_CHILD_SUBREAPER, we can enable
+      # these unittests.
+      gtest_filter_qemu += ":SandboxedInitTest.*"
+    }
 
     test_config = {
       run_as_root = false
