heartd: Migrate heartd to a D-Bus service
With this change, we can run heartd on demand instead of running it on
all devices.

BUG=b:309049308, b:322297664
TEST=1. Deploy and test it on DUT.
     2. Reboot DUT.
     3. heartd is not running.
     4. dbus-send --system --type=signal --dest=org.chromium.Heartd
	/org/chromium/Heartd org.chromium.Heartd
     5. heartd is running.
     6. /usr/bin//heartd-tool --action1=kNormalReboot
	--enable_normal_reboot --simulate_client_missing
     7. heartd triggers normal reboot successfully.

Change-Id: I9575f46d26ddd4ad2fbbcf8b734615f9a4fb8298
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5238594
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Florian Zubeil <zubeil@google.com>
Tested-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>

--- a/heartd/BUILD.gn
+++ b/heartd/BUILD.gn
@@ -7,6 +7,8 @@ import("//common-mk/pkg_config.gni")
 group("all") {
   deps = [
     ":heartd",
+    ":install_dbus_activation",
+    ":install_dbus_config",
     ":install_init_config",
     ":install_mojo_service_manager_policy_config",
     ":install_seccomp_policy",
@@ -30,6 +32,16 @@ executable("heartd") {
     "//heartd/daemon:libheartd",
     "//heartd/minijail:libminijail",
   ]
+}
+
+install_config("install_dbus_activation") {
+  sources = [ "dbus/org.chromium.Heartd.service" ]
+  install_path = "dbus_system_services"
+}
+
+install_config("install_dbus_config") {
+  sources = [ "dbus/org.chromium.Heartd.conf" ]
+  install_path = "dbus_system_d"
 }
 
 install_config("install_init_config") {
