--- a/heartd/init/heartd.conf
+++ b/heartd/init/heartd.conf
@@ -5,7 +5,8 @@
 description     "ChromeOS heartd (Health Ensure and Accident Resolve Treatment)"
 author          "chromium-os-dev@chromium.org"
 
-start on starting system-services
+# This daemon is started by D-Bus service activation configured in
+# dbus/org.chromium.Heartd.service.
 stop on stopping system-services
 respawn
 respawn limit 3 10  # if the job respawns 3 times in 10 seconds, stop trying.
