shill: move the exponential backoff logic out of PortalDetector
Originally, the PortalDetector performs the exponential backoff delay
for each trial. In the future, we want to trigger the PortalDetector and
CapportClient together. So the exponential backoff delay should be also
applied to the CapportClient.

This CL splits the exponential backoff logic to the new TrialScheduler
class, and let the NetworkMonitor controls it. With this CL, the
NetworkMonitor could trigger PortalDetector and CapportClient together
easily.

BUG=b:305129516
TEST=FEATURES=test emerge-brya shill

Change-Id: I8a76bd1032a6970b028e53dff53b57efd4af965a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5237830
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -345,6 +345,7 @@ static_library("libshill") {
     "network/network.cc",
     "network/network_monitor.cc",
     "network/slaac_controller.cc",
+    "network/trial_scheduler.cc",
     "network/validation_log.cc",
     "portal_detector.cc",
     "power_manager.cc",
@@ -797,6 +798,7 @@ if (use.test) {
       "network/network_monitor_test.cc",
       "network/network_test.cc",
       "network/slaac_controller_test.cc",
+      "network/trial_scheduler_test.cc",
       "network/validation_log_test.cc",
       "portal_detector_test.cc",
       "power_manager_test.cc",
