camera: tools: mctk: Add match-by-regex to --merge-yaml
On some platforms, entity names change in semi-predictable ways.

With this patch, config files gain the ability to keep working in many
such situations. Users can now add a regular expression to the remap
section, which will be matched against entity names.

BUG=b:322463135
TEST=mctk --yaml-merge a config file with (non-/)matching remap regex

Cq-Depend: chromium:5237831
Change-Id: Iffe4672ae855f745e3429f65457feca42c5bca37
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5239792
Tested-by: Max Staudt <mstaudt@chromium.org>
Reviewed-by: Hidenori Kobayashi <hidenorik@chromium.org>
Commit-Queue: Max Staudt <mstaudt@chromium.org>

--- a/camera/tools/mctk/BUILD.gn
+++ b/camera/tools/mctk/BUILD.gn
@@ -50,5 +50,8 @@ executable("mctk") {
   ]
   configs += [ "//camera/build:cros_camera_common" ]
   install_path = "bin"
-  pkg_deps = [ "yaml-0.1" ]
+  pkg_deps = [
+    "re2",
+    "yaml-0.1",
+  ]
 }
