heartd: add rate limit feedback to ping message
Adds a failure to ping requests when rate limit is achieved.
Add better logs in case of reboot.

BUG=b:320217159
TEST=1. Deploy and test it on DUT.
     2. Reboot DUT.
     3. status heartd -> heartd is not running.
     4. dbus-send --system --type=signal --dest=org.chromium.Heartd\
	/org/chromium/Heartd org.chromium.Heartd
     5. status heartd -> heartd is running.
     6. /usr/bin//heartd-tool --action1=kNormalReboot\
	--enable_normal_reboot --simulate_client_missing
     7. Kiosk app caused a Normal Reboot because of missing pings
        for .. -> heartd triggers normal reboot successfully.

Change-Id: I085cc437051722b675e9bfbc3c0109836276ed2b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5240426
Tested-by: Marc Grimme <marcgrimme@google.com>
Commit-Queue: Marc Grimme <marcgrimme@google.com>
Reviewed-by: Kerker Yang <kerker@chromium.org>
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>

--- a/heartd/init/mojo/heartd.jsonc
+++ b/heartd/init/mojo/heartd.jsonc
@@ -20,5 +20,12 @@
       "HeartdControl",
       "HeartdHeartbeatService"
     ]
+  },
+  {
+    "identity": "u:r:cros_ssh_session:s0",
+    "request": [
+      "HeartdControl",
+      "HeartdHeartbeatService"
+    ]
   }
 ]
