uwbd: Improve uwbd_client functionality
Adds the options of starting a ranging session as initiator/controller
or responder/controlee. Also adds the option of stopping the ongoing
ranging session.

BUG=b:316584956
TEST=Manually tested with 2 Chromebooks

Change-Id: I6432ab805f47a154f44d9256b53ed3994354085d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5241355
Tested-by: Vincent Chung <vincentchungzt@google.com>
Reviewed-by: Harshad Phule <phuleh@google.com>
Commit-Queue: Vincent Chung <vincentchungzt@google.com>

--- a/uwbd/Cargo.toml
+++ b/uwbd/Cargo.toml
@@ -25,6 +25,7 @@ protoc-rust = "2.24.1"
 
 [dependencies]
 async-trait = "0.1.32"
+clap = "4.1.14"
 dbus = "0.9.3"
 dbus-crossroads = "0.5.0"
 futures = "0.3.13"
